--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ h1  {
   margin-top:
   padding-bottom: 30%;
   margin-bottom: 7%;
-  font-size: 568%;
+  font-size: 7.5em;
   margin-top: 10%;
 }
 
@@ -90,8 +90,8 @@ hr {
   height: 50px;
 }
 
-.main-input::placeholder-shown: { 
-  font-size: 
+.main-input::placeholder: { 
+  display: 
 }
 
 .bookmarks-button {
@@ -141,6 +141,7 @@ input:focus {
   background-color: #CFD8DC;
   text-align: center;
   height: 100vh;
+  overflow: scroll;
 }
 
 .cards { 
