--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,10 @@ a:hover {
   text-decoration: underline #ffc107;
 }
 
+.read-underline {
+  text-decoration: underline #cfd8dc;
+}
+
 hr {
   color: #CFD8DC;
 }
@@ -154,5 +158,4 @@ button:focus {
 
 .read-disabled {
   background-color: #f2f4f4;
-  text-decoration: underline #cfd8dc;
 }
