--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,6 @@ img {
   width: 15%;
   margin-left: 13px;
   margin-right: 5px;
-
 }
 
 a {
@@ -90,15 +89,16 @@ hr {
   margin-bottom: 50px;
   width: 90%;
   height: 50px;
-  font-size: 140%;
+  font-size: 2em;
   padding-top: 10px;
+  padding-bo
   color: rgb(187,189,191);
   padding-left: 10px;
   border-width: 2px solid rgb(187,189,191);
 }
 
 input::placeholder {
-  font-size: 50%;
+  font-size: 1em;
   line-height: 2.5;
   color: rgb(187,189,191);
 }
@@ -125,6 +125,14 @@ input:focus {
 
 button:focus {
   outline: none;
+}
+
+#title-input { 
+  margin-bottom: 60px;
+}
+
+#url-input { 
+  margin-bottom: 19px; 
 }
 
 #delete-button {
@@ -157,6 +165,7 @@ button:focus {
   margin-bottom: 3%;
   margin-top: 3%;
   border-radius: 20%;
+  margin-top: 5px;
 }
 
 #enter:hover {
