--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ section {
 .container-left {
   text-align: center;
   background-color: #455A64;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 header {
@@ -89,7 +89,7 @@ hr {
   margin-bottom: 50px;
   width: 90%;
   height: 50px;
-  font-size: 2em;
+  font-size: 1.8em;
   padding-top: 10px;
   padding-bo
   color: rgb(187,189,191);
@@ -155,6 +155,18 @@ button:focus {
   border: none;
 }
 
+.display { 
+  margin: auto;
+  text-align: center;
+  color: white;
+  width: 30%;
+  display: inline-block;
+ }
+
+.button-wrapper { 
+  padding-bottom: 3%;
+ }
+
 .card-counter { 
   color: #455A64;
   background-color: white;
@@ -162,12 +174,12 @@ button:focus {
   height: 20px;
   border-width: 1px  solid color: #607D8B;
   margin: auto;
-  margin-bottom: 3%;
+  
   margin-top: 3%;
   border-radius: 20%;
   margin-top: 5px;
   display: inline-block;
-  margin-right: 10px;
+  margin-right: 30px;
 }
 
 .read-links { 
@@ -177,12 +189,12 @@ button:focus {
   height: 20px;
   border-width: 1px  solid color: #607D8B;
   margin: auto;
-  margin-bottom: 3%;
+
   margin-top: 3%;
   border-radius: 20%;
   margin-top: 5px;
   display: inline-block;
-  margin-right: 10px;
+  margin-right: 30px;
 }
 
 .unread-links {
@@ -192,12 +204,12 @@ button:focus {
   height: 20px;
   border-width: 1px  solid color: #607D8B;
   margin: auto;
-  margin-bottom: 3%;
+ 
   margin-top: 3%;
   border-radius: 20%;
   margin-top: 5px;
   display: inline-block;
-  margin-right: 10px;
+  margin-right: 30px;
 }
 
 #enter:hover {
@@ -225,32 +237,45 @@ button:focus {
   background-color: #f2f4f4;
 }
 
-@media screen and (min-width: 900px;) {
-  .container { 
-  width: 90%; 
+@media screen and (max-width: 768px) { 
+    main {
+    height: 100%;
+    display: unset;
+
   }
+
+  .container-left {
+    display: block;
+    min-height: 350px;
+    width: 100%;
+  }
+
+h1 {
+   margin-top: 0;
+    font-size: 1.5rem;
+   padding-top: 4%;
 }
 
-@media screen and (max-width: 550px) { 
-    .container {
-    height: 100%;
-  }
+img {
+  width: 15%;
+  margin-left: 13px;
+  margin-right: 5px;
+}
 
-  .main-content {
-    float: none;
-    height: 400px;
+
+#title-input { 
+  margin-bottom: 30px;
+}
+
+
+.container-right {
+    display: block;
+    min-height: 100vh;
     width: 100%;
   }
 
-  .secondary-content {
-    float: none;
-    height: 200px;
-    width: 100%;
-  }
+}
 
-  body { 
-    background-color: chartreuse;
-   }
- }
+
 
 
